fix(styling): the default app would have background cropped with small browser window

--- a/new_project/client/css/app.demo.less
+++ b/new_project/client/css/app.demo.less
@@ -5,7 +5,7 @@
 // Main
 
 body, html {
-  height: 100%;
+  min-height: 100%;
 }
 
 body {
