--- a/new_project/client/css/app.demo.styl
+++ b/new_project/client/css/app.demo.styl
@@ -8,7 +8,7 @@
 // Main
 
 body, html
-  height 100%
+  min-height 100%
 
 body
   font normal 1em sans-serif
